# synergia

./: .gitignore  CMakeLists.txt  README.md  myvc-wrapper.sh
include/: file_watcher.h  log.h  operation.h  plataform_utils.h  utils.h  versioning.h  websocket_client.h
src/: file_watcher.c  log.c  main.c  operation.c  plataform_utils.c  utils.c  versioning.c  websocket_client.c
